force-app/main/default/objects/Lab__c/fields/Kit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Kit_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Process builder updates field with &apos;true&apos;.</description>
    <label>Kit Sent</label>
    <type>Checkbox</type>
</CustomField>