force-app/main/default/objects/Lab__c/fields/Kit_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>Kit_Shipping_Date__c</fullName>
    <label>Kit Shipping Date</label>
    <type>Date</type>
</CustomField>