force-app/main/default/objects/Lab__c/fields/Kit_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Kit_Tracking_Number__c</fullName>
    <label>Kit Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>