force-app/main/default/objects/Lab__c/fields/Kit_Type__c.field-meta.xml
<CustomField>
    <fullName>Kit_Type__c</fullName>
    <inlineHelpText>Used by Andwin to specify whether a kit is P or M (Maternal Blood Redraw).</inlineHelpText>
    <label>Kit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P</fullName>
                <default>true</default>
                <label>P</label>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>