force-app/main/default/objects/Lab__c/fields/know_anyone_else_who_would_be_interested__c.field-meta.xml
<CustomField>
    <fullName>know_anyone_else_who_would_be_interested__c</fullName>
    <label>Know anyone interested in banking?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>