force-app/main/default/objects/Lab__c/fields/Lab_Email__c.field-meta.xml
<CustomField>
    <fullName>Lab_Email__c</fullName>
    <description>Used to populate an email address associated with the corresponding lab. Email alert sends email to lab regarding incoming collection with Placenta 2.0.</description>
    <label>Lab Email</label>
    <type>Email</type>
</CustomField>