force-app/main/default/objects/Lab__c/fields/Lab_Testing_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Lab_Testing_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is checked if the lab is conducting tests for CB, CT or PT. If test status equals &quot;Required&quot;. This box is checked if one child from a multiple birth is being tested.</inlineHelpText>
    <label>Lab Testing in Progress</label>
    <type>Checkbox</type>
</CustomField>