force-app/main/default/objects/Lab__c/fields/Last_Activity_Field_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Field_Sales__c</fullName>
    <formula>Medical_Professional__r.Last_Activity_Field_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Activity (Field Sales)</label>
    <type>DateTime</type>
</CustomField>