force-app/main/default/objects/Lab__c/fields/LPI_CB__c.field-meta.xml
<CustomField>
    <fullName>LPI_CB__c</fullName>
    <description>Lab Product Identifier for Cord Blood, 13 digits</description>
    <inlineHelpText>Lab Product Identifier for Cord Blood, 13 digits</inlineHelpText>
    <label>LPI CB</label>
    <length>40</length>
    <type>Text</type>
</CustomField>