force-app/main/default/objects/Lab__c/fields/LPI_M2__c.field-meta.xml
<CustomField>
    <fullName>LPI_M2__c</fullName>
    <description>unique identifier for Vitalant for Mother MBD, redraw</description>
    <externalId>true</externalId>
    <label>LPI M2</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>