force-app/main/default/objects/Lab__c/fields/LPI_PT__c.field-meta.xml
<CustomField>
    <fullName>LPI_PT__c</fullName>
    <description>Lab Product Identifier for Placenta Tissue, 13 characters</description>
    <inlineHelpText>Lab Product Identifier for Placenta Tissue, 13 characters</inlineHelpText>
    <label>LPI PT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>