force-app/main/default/objects/Lab__c/fields/Maternal_Blood_Draw_Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Blood_Draw_Kit_ID__c</fullName>
    <label>MBD Kit ID</label>
    <length>21</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>