force-app/main/default/objects/Lab__c/fields/Maternal_Exosomes_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosomes_Ordered__c</fullName>
    <description>Maternal exosomes stored value from CBO.</description>
    <formula>Cord_Blood_Order__r.Maternal_Exosomes_Ordered__c</formula>
    <label>Maternal Exosomes Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>