force-app/main/default/objects/Lab__c/fields/Maternal_Exosomes_Stored__c.field-meta.xml
<CustomField>
    <fullName>Maternal_Exosomes_Stored__c</fullName>
    <description>Rollup of the maternal exosome stored from family member.</description>
    <label>Maternal Exosomes Stored</label>
    <summaryFilterItems>
        <field>Baby__c.Maternal_Exosome_Cryogenically_Preserved__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Baby__c.Lab__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>