force-app/main/default/objects/Lab__c/fields/MBD_Comments__c.field-meta.xml
<CustomField>
    <fullName>MBD_Comments__c</fullName>
    <inlineHelpText>Used for additional comments; indicate when more than one redraw is requested.</inlineHelpText>
    <label>MBD Comments</label>
    <type>TextArea</type>
</CustomField>