force-app/main/default/objects/Lab__c/fields/MBD_Kit_Expiration_Date_2__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_Expiration_Date_2__c</fullName>
    <inlineHelpText>Expiration date when a second MBD Kit is sent.</inlineHelpText>
    <label>MBD Kit Expiration Date 2</label>
    <type>Date</type>
</CustomField>