force-app/main/default/objects/Lab__c/fields/MBD_Kit_ID_2__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_ID_2__c</fullName>
    <inlineHelpText>Used if a 2nd MBD Kit is shipped.</inlineHelpText>
    <label>MBD Kit ID 2</label>
    <length>21</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>