force-app/main/default/objects/Lab__c/fields/MBD_Kit_Lot_Number_2__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_Lot_Number_2__c</fullName>
    <inlineHelpText>Used if second MBD Kit is sent.</inlineHelpText>
    <label>MBD Kit Lot Number 2</label>
    <length>21</length>
    <type>Text</type>
</CustomField>