force-app/main/default/objects/Lab__c/fields/MBD_Kit_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_Lot_Number__c</fullName>
    <label>MBD Kit Lot Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>