force-app/main/default/objects/Lab__c/fields/MBD_Kit_Shipping_Date__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_Shipping_Date__c</fullName>
    <label>MBD Kit Shipping Date</label>
    <type>Date</type>
</CustomField>