force-app/main/default/objects/Lab__c/fields/MBD_Kit_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>MBD_Kit_Tracking_Number__c</fullName>
    <label>MBD Kit Tracking Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>