force-app/main/default/objects/Lab__c/fields/MBD_Package_Length__c.field-meta.xml
<CustomField>
    <fullName>MBD_Package_Length__c</fullName>
    <defaultValue>6</defaultValue>
    <label>MBD Package Length</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>