force-app/main/default/objects/Lab__c/fields/MBD_Package_Weight__c.field-meta.xml
<CustomField>
    <fullName>MBD_Package_Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <label>MBD Package Weight</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>