force-app/main/default/objects/Lab__c/fields/MBD_Package_Width__c.field-meta.xml
<CustomField>
    <fullName>MBD_Package_Width__c</fullName>
    <defaultValue>4</defaultValue>
    <label>MBD Package Width</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>