force-app/main/default/objects/Lab__c/fields/MBD_Quantity__c.field-meta.xml
<CustomField>
    <fullName>MBD_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>MBD Quantity</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>