force-app/main/default/objects/Lab__c/fields/MBD_Reason__c.field-meta.xml
<CustomField>
    <fullName>MBD_Reason__c</fullName>
    <inlineHelpText>This information is included in the email message that is sent to the mother when a maternal blood redraw is required.</inlineHelpText>
    <label>MBD Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>not included in your collection</fullName>
            </value>
            <value>
                <fullName>not adequate for testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>