force-app/main/default/objects/Lab__c/fields/MBD_Required_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MBD_Required_Date_Time__c</fullName>
    <label>MBD Required Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>