force-app/main/default/objects/Lab__c/fields/MBD_Results__c.field-meta.xml
<CustomField>
    <fullName>MBD_Results__c</fullName>
    <label>MBD Results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No outcome</fullName>
            </value>
            <value>
                <fullName>Negative indication</fullName>
            </value>
            <value>
                <fullName>Positive indication</fullName>
            </value>
            <value>
                <fullName>Positive indication - doctor notified</fullName>
            </value>
            <value>
                <fullName>Other Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>