force-app/main/default/objects/Lab__c/fields/MBD_Results_Uploaded_IDM__c.field-meta.xml
<CustomField>
    <fullName>MBD_Results_Uploaded_IDM__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the Maternal Blood Draw Infectious Disease Panel has been uploaded</inlineHelpText>
    <label>MBD Results Uploaded (IDM)</label>
    <type>Checkbox</type>
</CustomField>