force-app/main/default/objects/Lab__c/fields/MBD_Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>MBD_Shipping_Method__c</fullName>
    <label>MBD Shipping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FXST</fullName>
                <default>true</default>
                <label>FEDX Next Day 5:00PM</label>
            </value>
            <value>
                <fullName>STANDARD_OVERNIGHT</fullName>
            </value>
            <value>
                <fullName>FEDEX_2_DAY</fullName>
                <isActive>false</isActive>
                <label>FEDEX_2_DAY</label>
            </value>
            <value>
                <fullName>FEDEX_2_DAY_AM</fullName>
                <isActive>false</isActive>
                <label>FEDEX_2_DAY_AM</label>
            </value>
            <value>
                <fullName>FEDEX_EXPRESS_SAVER</fullName>
                <isActive>false</isActive>
                <label>FEDEX_EXPRESS_SAVER</label>
            </value>
            <value>
                <fullName>FEDEX_GROUND</fullName>
                <isActive>false</isActive>
                <label>FEDEX_GROUND</label>
            </value>
            <value>
                <fullName>FXPO</fullName>
                <isActive>false</isActive>
                <label>FEDX Next Day 10:30AM</label>
            </value>
            <value>
                <fullName>FIRST_OVERNIGHT</fullName>
                <isActive>false</isActive>
                <label>FIRST_OVERNIGHT</label>
            </value>
            <value>
                <fullName>GROUND_HOME_DELIVERY</fullName>
                <isActive>false</isActive>
                <label>GROUND_HOME_DELIVERY</label>
            </value>
            <value>
                <fullName>PRIORITY_OVERNIGHT</fullName>
                <isActive>false</isActive>
                <label>PRIORITY_OVERNIGHT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>