force-app/main/default/objects/Lab__c/fields/Medical_Professional__c.field-meta.xml
<CustomField>
    <fullName>Medical_Professional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HCP</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Collections by HCP</relationshipLabel>
    <relationshipName>Labs_HCP</relationshipName>
    <type>Lookup</type>
</CustomField>