force-app/main/default/objects/Lab__c/fields/Medical_Records_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Medical_Records_Request_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to flag when we have requested medical records from the client.</description>
    <inlineHelpText>Indicator to flag when we have requested medical records from the client.</inlineHelpText>
    <label>Medical Records Request Sent</label>
    <type>Checkbox</type>
</CustomField>