force-app/main/default/objects/Lab__c/fields/MHQ_Agreement_Document_Regenerated_Date__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Agreement_Document_Regenerated_Date__c</fullName>
    <label>MHQ Agreement Document Regenerated Date</label>
    <type>DateTime</type>
</CustomField>