force-app/main/default/objects/Lab__c/fields/MHQ_Q29_1_Fixed__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Q29_1_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track when the MHQ Questions 29.1 is fixed.</description>
    <label>MHQ Q29.1 Fixed</label>
    <type>Checkbox</type>
</CustomField>