force-app/main/default/objects/Lab__c/fields/MHQ_Signature_Agreed__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Signature_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MHQ Signature Agreed</label>
    <type>Checkbox</type>
</CustomField>