force-app/main/default/objects/Lab__c/fields/MHQ_Signature_Headers__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Signature_Headers__c</fullName>
    <label>MHQ Signature Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>