force-app/main/default/objects/Lab__c/fields/MHQ_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Signature_Text__c</fullName>
    <label>MHQ Signature Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>