force-app/main/default/objects/Lab__c/fields/MHQ_Signature_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Signature_Timestamp__c</fullName>
    <label>MHQ Signature Timestamp</label>
    <type>DateTime</type>
</CustomField>