force-app/main/default/objects/Lab__c/fields/MHQ_Status_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>MHQ_Status_Timestamp__c</fullName>
    <label>MHQ Status Timestamp</label>
    <type>DateTime</type>
</CustomField>