force-app/main/default/objects/Lab__c/fields/Migrated_to_Baby_records__c.field-meta.xml
<CustomField>
    <fullName>Migrated_to_Baby_records__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used March 2017, temporary field, can be deleted</inlineHelpText>
    <label>Migrated to Baby records</label>
    <type>Checkbox</type>
</CustomField>