force-app/main/default/objects/Lab__c/fields/Modified_Send_to_Shipping_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Modified_Send_to_Shipping_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used to track changes to certain fields on the Lab, so we include the record in a daily report sent to Airspace with &apos;modified&apos; records: baby&apos;s due date, parent 1 or parent 2 contact or hospital info</description>
    <label>Modified Send to Shipping Vendor</label>
    <type>Checkbox</type>
</CustomField>