force-app/main/default/objects/Lab__c/fields/Modified_Shipping_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Modified_Shipping_Data_Date__c</fullName>
    <description>Used to timestamp modifications to record, which are sent to Airspace, This is used in timebased flow, to uncheck &apos;modified&apos; checkbox, so modification is not included in tomorrow&apos;s report.</description>
    <label>Modified Shipping Data Date</label>
    <type>DateTime</type>
</CustomField>