force-app/main/default/objects/Lab__c/fields/Mother_s_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Ethnicity__c</fullName>
    <label>Contact Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Black or African American</fullName>
            </value>
            <value>
                <fullName>Native American or American Indian</fullName>
            </value>
            <value>
                <fullName>Asian or Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>