force-app/main/default/objects/Lab__c/fields/Mother_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_First_Name__c</fullName>
    <inlineHelpText>Syncs with Contact info using a trigger</inlineHelpText>
    <label>Contact First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>