force-app/main/default/objects/Lab__c/fields/Mother_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Phone__c</fullName>
    <inlineHelpText>Syncs with Contact info using a trigger</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>