force-app/main/default/objects/Lab__c/fields/Mother_s_Profession__c.field-meta.xml
<CustomField>
    <fullName>Mother_s_Profession__c</fullName>
    <label>Contact Profession</label>
    <length>100</length>
    <type>Text</type>
</CustomField>