force-app/main/default/objects/Lab__c/fields/Mothers_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Date_Of_Birth__c</fullName>
    <label>Contact Date Of Birth</label>
    <type>Date</type>
</CustomField>