force-app/main/default/objects/Lab__c/fields/Mothers_Email__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Email__c</fullName>
    <inlineHelpText>Syncs with Contact info using a trigger</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>