force-app/main/default/objects/Lab__c/fields/MyGenome_Ordered__c.field-meta.xml
<CustomField>
    <fullName>MyGenome_Ordered__c</fullName>
    <description>The total number of MyGenome services ordered.</description>
    <formula>Cord_Blood_Order__r.My_Genome_Premium_Ordered__c +  Cord_Blood_Order__r.My_Genome_Standard_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZDeprecate MyGenome Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>