force-app/main/default/objects/Lab__c/fields/MyNewborn_Ordered__c.field-meta.xml
<CustomField>
    <fullName>MyNewborn_Ordered__c</fullName>
    <description>The total number of MyNewborn services ordered.</description>
    <formula>Cord_Blood_Order__r.Newborn_Panel_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ZDeprecate MyNewborn Genome Ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>