force-app/main/default/objects/Lab__c/fields/New_Process__c.field-meta.xml
<CustomField>
    <fullName>New_Process__c</fullName>
    <formula>Cord_Blood_Order__r.New_Process__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Process</label>
    <type>Checkbox</type>
</CustomField>