force-app/main/default/objects/Lab__c/fields/Number_of_Births__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Births__c</fullName>
    <formula>text( Cord_Blood_Order__r.Number_of_Births__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Births</label>
    <type>Text</type>
</CustomField>