force-app/main/default/objects/Lab__c/fields/Number_of_Births_new__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Births_new__c</fullName>
    <inlineHelpText>Used for Erin&apos;s KPC report</inlineHelpText>
    <label>Number of Births (new)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>