force-app/main/default/objects/Lab__c/fields/Number_of_Kits__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kits__c</fullName>
    <formula>IF ( CONTAINS(Product_Ordered__c, &quot;single&quot;), 1,
IF ( CONTAINS(Product_Ordered__c, &quot;twins&quot;), 2,
IF ( CONTAINS(Product_Ordered__c, &quot;triplets&quot;), 3, 
IF ( CONTAINS(Product_Ordered__c, &quot;SINGLE&quot;), 1,
IF ( CONTAINS(Product_Ordered__c, &quot;TWINS&quot;), 2,
IF ( CONTAINS(Product_Ordered__c, &quot;TRIPLES&quot;), 3,
IF ( Number_of_Births__c = &quot;Single&quot;, 1, 
IF ( Number_of_Births__c = &quot;Twins&quot;, 2,
IF ( Number_of_Births__c = &quot;Triples&quot;, 3,
0)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Kits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>