force-app/main/default/objects/Lab__c/fields/Number_of_Kits_FedEx__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kits_FedEx__c</fullName>
    <inlineHelpText>Non-formula field that provides number of kits (ie 2 for twins) for FedEx label.</inlineHelpText>
    <label>Number of Kits (FedEx)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>