force-app/main/default/objects/Lab__c/fields/Number_of_Packages__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Packages__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Number of Packages</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>