force-app/main/default/objects/Lab__c/fields/Number_of_Products_Stored__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_Stored__c</fullName>
    <formula>Cord_Blood_2_0_Stored__c +  Cord_Tissue_Stored__c +  Placenta_Tissue_Stored__c +  Placenta_2_0_Amnion_Stored__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Products Stored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>