force-app/main/default/objects/Lab__c/fields/OBGYN_Address__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Address__c</fullName>
    <label>OBGYN Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>