force-app/main/default/objects/Lab__c/fields/OBGYN_Change_for_Stipend__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Change_for_Stipend__c</fullName>
    <description>Used by Outreach and Field Sales to document changes made to HCP or HCP Practice</description>
    <inlineHelpText>Used by Outreach and Field Sales to document changes made to HCP or HCP Practice</inlineHelpText>
    <label>OBGYN Change for Stipend</label>
    <length>255</length>
    <type>Text</type>
</CustomField>