force-app/main/default/objects/Lab__c/fields/OBGYN_City__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_City__c</fullName>
    <label>OBGYN City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>