force-app/main/default/objects/Lab__c/fields/OBGYN_Email_for_Fax__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Email_for_Fax__c</fullName>
    <label>OBGYN Email for Fax</label>
    <type>Email</type>
</CustomField>