force-app/main/default/objects/Lab__c/fields/OBGYN_Fax_or_Email__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Fax_or_Email__c</fullName>
    <label>OBGYN Fax or Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>