force-app/main/default/objects/Lab__c/fields/OBGYN_First_Name__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_First_Name__c</fullName>
    <label>OBGYN First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>