force-app/main/default/objects/Lab__c/fields/OBGYN_ID__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_ID__c</fullName>
    <description>temporary field used to import doctor records</description>
    <formula>Medical_Professional__r.Id</formula>
    <label>OBGYN ID</label>
    <type>Text</type>
</CustomField>