force-app/main/default/objects/Lab__c/fields/OBGYN_Name__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Name__c</fullName>
    <label>OBGYN Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>