force-app/main/default/objects/Lab__c/fields/OBGYN_Not_Decided__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Not_Decided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OBGYN Not Decided</label>
    <type>Checkbox</type>
</CustomField>