force-app/main/default/objects/Lab__c/fields/OBGYN_Practice_ID__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Practice_ID__c</fullName>
    <description>temp field used to create Account LU for OBGYN Practice</description>
    <formula>HCP_Practice__r.Id</formula>
    <label>OBGYN Practice ID</label>
    <type>Text</type>
</CustomField>