force-app/main/default/objects/Lab__c/fields/OBGYN_Role__c.field-meta.xml
<CustomField>
    <fullName>OBGYN_Role__c</fullName>
    <label>OBGYN Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Doctor</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>